--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="uttaron_logo.png"/>
 
   <title>uttaron</title>
   <link rel="manifest" href="manifest.json">
