--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
 
   <title>uttaron</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
   <script>
     // The value below is injected by flutter build, do not touch.
@@ -40,6 +41,11 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+
+  <img src="uttaron_logo.png" class="center" />
+
+
+
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
